--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "vue": "^3.4.38",
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.4.5"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.0.4",
+    "vite": "^5.2.0"
   }
 }
